# frodokexp-rust

./: .gitignore  Cargo.toml  README.md
C_linking_test/: Makefile  test.c
benches/: frodokexp_bench.rs
src/: frodokexp.h  lib.rs  noise.rs  params.rs  poly.rs  skem.rs  vec.rs
