[package]
name = "frodokexp"
version = "0.1.0"
edition = "2021"

[lib]
name = "frodokexp"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_core = "0.6.0"
libc = "0.2"
[dev-dependencies]
criterion = "0.3"
#
[[bench]]
name = "frodokexp_bench"
harness = false
